# varch

./: CMakeLists.txt
include/nvcodec/: NvDecoder.h
include/varch/: package_meta.hpp  raw_descriptor.hpp  thumbnail.hpp
include/varch/unarchive/: statistics.hpp  unarchiver.hpp
include/varch/utils/: common.hpp  filter_reader.hpp  idx.hpp
include/vocomp/index/: index.hpp
include/vocomp/refine/: refiner.hpp
include/vocomp/video/: decompressor.hpp
src/: CMakeLists.txt
src/archive/: CMakeLists.txt  archiver.cc  video_compressor.cc
src/refine/: CMakeLists.txt  block_input_streamer.hpp  block_mempool.hpp  padded_reader.hpp  refiner.cc
src/unarchive/: statistics.cc  unarchiver.cc
src/unarchive/backends/nvdec/: nvdecoder_async.cc
src/video_compress/: CMakeLists.txt
src/video_compress/nvenc/: NvEncoderCuda.ii
src/video_decompress/: CMakeLists.txt  decompressor.cc
src/video_decompress/nvdec/: NvDecoder.h  NvDecoder.ii
tests/: test_archive.cc
tools/: CMakeLists.txt  archive-info.cc  archive-thumbnailer.cc  archiver.cc  downsampler.cc  meta-builder.cc  tool_utils.hpp  voxel-archive.cc  voxel-refine.cc
